# meshbooleanplugin

./: .gitignore  BooleanNode.py  BooleanPlug_plugin.py  CMakeLists.txt  FillingNode.py  Makefile  MyPlugDialog.ui  PipelineNode.py  PipelineWidget.py  README.md  RemeshingNode.py  __init__.py  add_dialog.py  clone.sh  mesh_boolean_api.py  mesh_boolean_dialog.py  mesh_boolean_plugin.py  mesh_boolean_utils.py  myMmgPlugDialog.py  pipeline.ui  requirements.txt  test_meshboolean_api.py
.github/: UB22.yml
.github/workflows/: UB-latest.yml  UB22.yml
InteractiveAndRobustMeshBooleans/: compile_IRMB.sh  exec_InteractiveAndRobustMeshBooleans.py
VTK/: exec_VTK.py
add_pipeline_element/: AddDialog.ui  add_dialog.py
cgal/: CMakeLists.txt  exec_cgal.cc  exec_cgal.py
cork/: CMakeLists.txt  compile_cork.sh  cork  exec_cork.py  off.cpp
irmb/: CMakeLists.txt  compile_IRMB.sh  exec_irmb.py
libigl/: CMakeLists.txt  compile_libigl.sh  exec_libigl.py  main.cpp
mcut/: CMakeLists.txt  CSGBoolean  CSGBoolean.cpp  compile_mcut.sh  exec_mcut.py
pipeline/: BooleanNode.py  FillingNode.py  PipelineDialog.py  PipelineNode.py  PipelineWidget.py  RemeshingNode.py  pipeline.ui
tests/: Makefile  README.md  gen_meshes.py  tests.py
vtk/: exec_vtk.py  run_vtk.py
